--- a/style.scss
+++ b/style.scss
@@ -185,22 +185,21 @@ body{
         }
         .grid{
             display: flex;
+            align-content: center;
+            flex-wrap: wrap;
             flex-direction: column;
-            //grid-template-columns: repeat(1 , 1fr);
-            //grid-template-rows: repeat(3 , 1fr);
-            //row-gap: 18px;
             .bloque{
                 background-color: white;
-                width: 230px;
-                height: 330px;
+                width: 240px;
+                height: 350px;
                 border-radius: 12px;
                 margin: 10px 39px;
                 text-align: left;
                 padding: 6px;
                 @media screen and (min-width: 900px){
                     margin: 20px;
-                    width: 260px;
-                    height: 360px;
+                    width: 280px;
+                    height: 380px;
                 }
                 .img{
                     display: block;
@@ -259,8 +258,8 @@ body{
                 border-radius: 6px;
                 background-position: center;
                 background-size: cover;
-                width: 290px;
-                height: 260px;
+                width: 300px;
+                height: 270px;
                 margin: auto;
                 text-align: left;
                 padding: 10px;
